YT Refactoring